# quotes_service

./: .gitignore  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: quotes.py
docker/: Dockerfile
quotes_service/: main.py
quotes_service/api/v1/: quotes.py
quotes_service/core/: config.py
src/: Makefile  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/v1/: quotes.py
src/app/core/: config.py
src/app/service/quotes_service/: implementation_memory.py  interface.py
src/docker/: Dockerfile  prod.env
src/tests/: conftest.py  test_api_quote.py  test_quotes_service.py
src/utils/: sqlite_to_json_converter.py
tests/: conftest.py  test_quotes_service.py
utils/: sqlite_to_json_converter.py
