[tool.poetry]
name = "quotes_service"
version = "0.1.0"
description = ""
authors = ["Elisei"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
fastapi = "^0.79.0"
uvicorn = {extras = ["standart"], version = "^0.18.2"}
orjson = "^3.7.11"
certifi = "^2022.6.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.1"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
