[tool.poetry]
name = "quotes_service"
version = "0.1.0"
description = ""
authors = ["Elisei"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
fastapi = "^0.103.0"
orjson = "^3.9.2"
certifi = "^2023.7.22"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.4.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.7.0"
httpx = "^0.24.1"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target_version = ['py310']

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"
line_length = 120
src_paths = ["app"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
